--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="logo">GEMINI</div>
     <h1>We are a <span class="creative">Creative</span> <br /> Web And Mobile Design Agency</h1>
     <div class="left card">
-      <img class="tile-image" src="./assets/images/ux-indonesia-qC2n6RQU4Vw-unsplash.jpg" alt="hand and flower in water">
+      <img class="tile-image" src="beautiful.jpg" alt="hand and flower in water">
       <h2 class="card-title">Beauty</h2>
       <p class="card-text">We strive to create the most beautiful websites and mobile designs for all your needs. Working closely with you
         to
@@ -24,7 +24,7 @@
         develop an amazing website and mobile interface/experience for your business.</p>
     </div>
 
-    <div class="right card"><img class="tile-image" src="./assets/images/marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="metal structure">
+    <div class="right card"><img class="tile-image" src="construction.jpg" alt="metal structure">
       <h2 class="card-title">Construction</h2>
       <p>Built by our team of professional developers, we ensure the most rigourous and modern websites. Built from
         scratch using HTML and CSS. OnlySS the best for you.</p>
